<resources>
    <string name="app_name">Login</string>
    <string name="user_name">  User Name</string>
    <string name="password">  Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_btn">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="title">Login</string>
    <string name="welcome">Welcome Back!</string>
    <string name="accountcreate">Don"'"t Have an Account?</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="details">Enter word</string>
    <string name="click">Click</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
